# trading-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
adapters/: __init__.py  allocation.py  alpaca.py  base.py  ccxt_adapter.py  kis.py  kis_overseas.py  news_kr.py  news_rss.py  retry.py  upbit.py
alpha_lab/: __init__.py  backtest.py  data.py  dsl.py  library.py  loop.py  signals.py
eval/: __init__.py  ltb_agent.py  meta.py  paper_portfolio.py  perf.py  rolling.py
gui/: dashboard.py  panels.py
harness/: __init__.py  deadline.py  env.py  jsonlog.py  lock.py  loop.py  netgate.py  notify.py  policy.py  runner.py  usage.py
interaction/: __init__.py  api.py  briefing.py  chat.py  context.py
llm/: __init__.py  backends.py  base.py  parsing.py  router.py
memory/: __init__.py  admission.py  influence.py  journal.py  retention.py  retrieval.py  store.py
reflection/: __init__.py  weekly.py
regime/: __init__.py  live.py  meta.py  pulse.py  state.py
risk/: __init__.py  engine.py  guard.py  live.py
scripts/: check_credentials.py  propose_improvements.py  report_ablation.py  request_capabilities.py  run_alpha_lab.py  run_mcp_server.py  run_paper_step.py  run_treasury_step.py  run_watcher.py  scheduler.py
scripts/launchd/: com.trading-agent.paper-step.plist
trader/: __init__.py  agent.py  debate.py  features.py  schema.py
treasury/: __init__.py  guard.py  manual.py
watcher/: __init__.py  triggers.py
