[project]
name = "trading-agent"
version = "0.1.0"
description = "self-improve + agent memory 중심 트레이딩 에이전트 프레임워크"
readme = "trading-agent-design.md"
requires-python = ">=3.12"
dependencies = [
    # Phase 0: 어댑터 + 페이퍼 하니스. 시장 연동 추가 시 아래에 확장.
    "ccxt>=4.4.0",        # 크립토 어댑터 (testnet, Phase 0 선봉)
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "mcp>=1.28.1",
    "numpy>=2.5.1",
    "uvicorn>=0.51.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["adapters", "harness"]
